--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
   <groupId>at.fhj.iit</groupId>
   <artifactId>Drinks</artifactId>
   <version>1.3.0</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+      <version>RELEASE</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
   <name>Drinks</name>
 
   <url>https://github.com/michaelulm/software-configuration-management/tree/master/exercises/Drinks-Sample</url>
@@ -61,8 +69,7 @@
     <maven.comiler.release>11</maven.comiler.release>
   </properties>
 
-
-  <build>
+   <build>
     <plugins>
       <!-- plugins for build automation process -->
       <plugin>
