--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,13 @@
   <groupId>at.fhj.iit</groupId>
   <artifactId>Drinks</artifactId>
   <version>1.3.0</version>
+  <dependencies>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <version>5.6.2</version>
+    </dependency>
+  </dependencies>
   <name>Drinks</name>
 
   <url>https://github.com/michaelulm/software-configuration-management/tree/master/exercises/Drinks-Sample</url>
