--- a/pom.xml
+++ b/pom.xml
@@ -16,40 +16,35 @@
     <developers>
         <!-- each developer with general information for better communication within the project team -->
         <developer>
-            <id>michaelulm</id>
-            <name>Michael Ulm</name>
-            <email>michael.ulm@fh-joanneum.at</email>
-            <url>https://www.michael-ulm.at</url>
+            <id>SimonMFuchs</id>
+            <name>Simon Fuchs</name>
+            <email>simon.fuchs@edu.fh-joanneum.at</email>
             <organization>FH JOANNEUM GmbH</organization>
             <organizationUrl>https://www.fh-joanneum.at/iit</organizationUrl>
             <roles>
-                <role>Senior Lecturer</role>
-            </roles>
-            <timezone>Europe/Vienna</timezone>
-            <properties>
-                <picUrl>https://avatars2.githubusercontent.com/u/15637184</picUrl>
-            </properties>
-        </developer>
-        <developer>
-            <id>chrishofer</id>
-            <name>Christian Hofer</name>
-            <email>christian.hofer@campus02.at</email>
-            <organization>CAMPUS 02 Fachhochschule der Wirtschaft GmbH</organization>
-            <organizationUrl>https://www.campus02.at/wirtschaftsinformatik</organizationUrl>
-            <roles>
-                <role>Lecturer &amp; Research Scientist</role>
+                <role>Student</role>
             </roles>
             <timezone>Europe/Vienna</timezone>
         </developer>
         <developer>
-            <id>Rigbin</id>
-            <name>Harald Schwab</name>
-            <email>harald.schwab2@fh-joanneum.at</email>
-            <url>https://github.com/Rigbin</url>
+            <id>dominik-bregovic</id>
+            <name>Dominik Bregovic</name>
+            <email>dominik.bregovic@edu.fh-joanneum.at</email>
             <organization>FH JOANNEUM GmbH</organization>
             <organizationUrl>https://www.fh-joanneum.at/iit</organizationUrl>
             <roles>
-                <role>Researcher</role>
+                <role>Student</role>
+            </roles>
+            <timezone>Europe/Vienna</timezone>
+        </developer>
+        <developer>
+            <id>KatarinaBorovsak</id>
+            <name>Katarina Borovsak</name>
+            <email>katarina.borovsak@edu.fh-joanneum.at</email>
+            <organization>FH JOANNEUM GmbH</organization>
+            <organizationUrl>https://www.fh-joanneum.at/iit</organizationUrl>
+            <roles>
+                <role>Student</role>
             </roles>
             <timezone>Europe/Vienna</timezone>
             <properties/>
@@ -200,6 +195,7 @@
                 <reportSets>
                     <reportSet>
                         <reports>
+                            <report>report</report>
                             <report>report</report>
                         </reports>
                     </reportSet>
