--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,9 @@
     <artifactId>Drinks</artifactId>
     <version>1.3.0</version>
     <name>Drinks</name>
-
+    <description>This project lets you create different drinks composed of different liquids.
+        You then can add drinks as a purchase to a cash register, which then tracks what kind of drinks got sold,
+        when and by whom they got sold and how much revenue you made.</description>
     <url>https://github.com/michaelulm/software-configuration-management/tree/master/exercises/Drinks-Sample</url>
 
     <!-- general developers information -->
